--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "publish-app": "expo publish"
   },
   "dependencies": {
     "@expo-google-fonts/lato": "^0.2.2",
@@ -18,12 +19,15 @@
     "@react-navigation/stack": "^6.3.12",
     "camelize": "^1.0.1",
     "expo": "~47.0.12",
+    "expo-camera": "~13.1.0",
     "expo-font": "~11.0.1",
+    "expo-image-manipulator": "~11.0.0",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.17.1",
     "lottie-react-native": "5.1.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-camera-kit": "^13.0.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-maps": "1.3.2",
     "react-native-paper": "^5.1.3",
